--- a/query.html
+++ b/query.html
@@ -606,9 +606,16 @@
                     temporaryStr += "<span class='glyphicon glyphicon-chevron-down' aria-hidden='true'></span>"; //Add icon (down)
                     temporaryStr += "</button>"; //Close button div
 
-                    var addCommentStr = "<p>" + dateCreated + " " + timeCreated + " " + allComments[j].get("comment") + "</p>"; //The HTML we want to add
+                    var addCommentStr = "<p>" + dateCreated + " " + timeCreated + " " + allComments[j].get("comment") + allComments[j].id + "</p>"; //The HTML we want to add
+
                     // alert(addCommentStr); //For debugging
                     temporaryStr += addCommentStr; //Add to the larger string
+
+                    var commentID = allComments[j].id;
+                    temporaryStr += "<button type='button' class='btn btn-default' id= aria-label='Flag as Inappropriate' onClick = 'flagComment('" + commentID + "')'>"; //Button open div
+                    temporaryStr += "<span class='glyphicon glyphicon-flag' aria-hidden='true'></span>"; //Add icon (down)
+                    temporaryStr += "</button>"; //Close button div
+
                   }
                   temporaryStr += "</div>" //Close div
                   finalObj += temporaryStr; //Add to finalObj
@@ -746,6 +753,11 @@
               alert('Failed to vote helpful, with error code: ' + error.message);
             }
           });
+        }
+
+        function flagComment(num)
+        {
+          alert(num);
         }
 
       </script>
