--- a/sellItem.html
+++ b/sellItem.html
@@ -672,13 +672,51 @@
                     <script>
                     var cropModalScript = function(){
                       jQuery(function($) {
-                        //alert("cropping")
-                        $('#workingImage').Jcrop({
+                      
+                      var jcrop_api;
+
+
+                      $('#workingImage').Jcrop({
+                        onChange:   showCoords,
+                        onSelect:   showCoords,
+                        onRelease:  clearCoords
+                      },function(){
+                        jcrop_api = this;
+                      });
+
+                      $('#coords').on('change','input',function(e){
+                        var x1 = $('#x1').val(),
+                            x2 = $('#x2').val(),
+                            y1 = $('#y1').val(),
+                            y2 = $('#y2').val();
+                            //alert(x1)
+                        jcrop_api.setSelect([x1,y1,x2,y2]);
+                      });
+                      });
+
+                      $('#workingImage').Jcrop({
                           aspectRatio: 273 / 182,
                           boxWidth: 858
                         });
-                      });
                     }
+
+                    function showCoords(c)
+                    {
+                      //alert("test")
+                      $('#x1').val(c.x);
+                      $('#y1').val(c.y);
+                      $('#x').val(c.x);
+                      $('#y').val(c.y);
+                      $('#x2').val(c.x2);
+                      $('#y2').val(c.y2);
+                      $('#w').val(c.w);
+                      $('#h').val(c.h);
+                    };
+
+                    function clearCoords()
+                    {
+                      $('#coords input').val('');
+                    };          
                     </script>
 
                     <?php
@@ -698,7 +736,27 @@
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">cancel</button>
                       <button type="button" class="btn btn-primary">undo</button>
-                      <button type="button" class="btn btn-primary">crop</button>
+                      <form action="crop.php" method="post" onSubmit="return checkCoords();">
+                        <input type="hidden" id="x" name="x">
+                        <input type="hidden" id="y" name="y">
+                        <input type="hidden" id="w" name="w">
+                        <input type="hidden" id="h" name="h">
+                        <input type="submit" value="Crop Image"><!--<button type="button" class="btn btn-primary">crop</button>-->
+                      </form>
+                       <form id="coords"
+                        class="coords"
+                        onsubmit="return false;"
+                        action="http://example.com/post.php">
+
+                        <div class="inline-labels">
+                        <label>X1 <input type="text" size="4" id="x1" name="x1" /></label>
+                        <label>Y1 <input type="text" size="4" id="y1" name="y1" /></label>
+                        <label>X2 <input type="text" size="4" id="x2" name="x2" /></label>
+                        <label>Y2 <input type="text" size="4" id="y2" name="y2" /></label>
+                        <label>W <input type="text" size="4" id="w" name="w" /></label>
+                        <label>H <input type="text" size="4" id="h" name="h" /></label>
+                        </div>
+                      </form>
                       <button type="button" class="btn btn-primary">save changes</button>
                     </div>
                   </div>
