--- a/buy.html
+++ b/buy.html
@@ -783,9 +783,9 @@
             
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input id="tempSearch" type="search" class="form-control" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
+              <button type="submit" class="btn btn-primary" onclick="submitSearch(); return false;"><span class="glyphicon glyphicon-search"></span></button>
             </form>
 <!-- 
             <ul class="nav navbar-nav navbar-right" id="main-nav-social-icons">
