--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
             
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
-                <input type="text" class="form-control" id="tempSearch" placeholder="Search">
+                <input id="tempSearch" type="search" class="form-control" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary" onClick="submitSearch(); return false;"><span class="glyphicon glyphicon-search"></span></button>
+              <button type="submit" class="btn btn-primary" onclick="submitSearch(); return false;"><span class="glyphicon glyphicon-search"></span></button>
             </form>
 
           </div><!--/.nav-collapse -->
