--- a/popular.html
+++ b/popular.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
       <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
+      <script src="header.js"></script>
       <script type="text/javascript" src="photoGeneration.js"></script>
 
     <title>Popular</title>
@@ -416,9 +417,9 @@
             
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
-                <input type="search" class="form-control" placeholder="Search">
+                <input id="tempSearch" type="search" class="form-control" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
+              <button type="submit" class="btn btn-primary" onclick="submitSearch(); return false;"><span class="glyphicon glyphicon-search"></span></button>
             </form>
             
           </div><!--/.nav-collapse -->
