--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
-    <script src="photoGeneration.js"></script>
+    <script src="js/photoGeneration.js"></script>
     <script src="header.js"></script>
     <script type="text/javascript" src="js/instafeed.min.js"></script>
 
@@ -391,6 +391,8 @@
           
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+              <li><a href="men.html">men</a><li>
+              <li><a href="men.html">women</a><li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">buy <b class="caret"></b></a>
                 <ul class="dropdown-menu">
