--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="js/photoGeneration.js"></script>
-    <script src="header.js"></script>
+    <script src="js/header.js"></script>
     <script type="text/javascript" src="js/instafeed.min.js"></script>
 
 
