Messing with adding header through HTML file

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
       </div><!-- /logo row -->
       
       <!-- Static navbar -->
-      <div class="navbar navbar-default" role="navigation">
+      <div id="insertNavbar">
+        <div class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -291,6 +292,10 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
+      </div>
+      <script>
+        //$("#insertNavbar").load("desktop/maddy-heatswap/menu.html"); 
+      </script>
       <div id="main-wrap"><!-- Main content wrapper -->
         
 <!-- >>>>>>> Stashed changes -->
