--- a/buy.html
+++ b/buy.html
@@ -61,7 +61,7 @@
                 var finalObj="";
                 finalObj += "<ul class='nav navbar-nav navbar-right'>\n"
 
-                finalObj += "<li class='dropdown'><a href='#' class='dropdown-toggle' data-toggle='dropdown' id='usernameDisplay'>What's up <b>"+currentName+"</b>?</a>\n"
+                finalObj += "<li class='dropdown'><a href='#' class='dropdown-toggle' data-toggle='dropdown' id='usernameDisplay'>What's up <b id='currentUsername'>"+currentName+"</b>?</a>\n"
                 finalObj += "<ul class='dropdown-menu'>\n"
                 finalObj += "<li><a href='storePreview.html'>View Store</a></li>\n"
                 if(currentUser.get("storeId")!="")
@@ -1121,6 +1121,9 @@
                       <!--Need to set value-->
                     <button id="paypalBtn" class="btn btn-primary" style="width:100%;" onclick="setForm()"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="center" style="margin-right:7px;"></button>
 
+                    <!-- Add to cart button -->
+                    <button id="addToCartBtn" class = "btn btn-primary" onClick="addToCart()">Add to Cart</button>
+
                     <script>
                       var modalTrigger = function () {
                         var currentUser = Parse.User.current();
@@ -1132,6 +1135,37 @@
                           $('#buyModal').modal('show');   
                           //alert("hello")
                         };
+                      }
+
+                      var addToCart = function() {
+                        if (currentUser != null) //If user signed in
+                        {
+                          var currentUsername = document.getElementById("currentUsername").innerHTML;
+                          
+                          Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP1lZLiC8LBQHYyCvqwuE3e3");
+                          var Cart = Parse.Object.extend("cart");
+                          var cart = new Cart();
+                          var shoeID = decodeStuffz();
+                          alert("User ID: " + currentUsername);
+                          alert("Shoe ID: " + shoeID);
+                          cart.set("itemID", shoeID); //Set purchase item ID
+                          cart.set("userID", currentUsername); //Set user ID
+
+                          cart.save(null,
+                          {
+                            success: function(contact) {
+                            // alert('New object created with objectId: ' + contact.id); //Feedback
+                            alert("Successfully added to cart");
+                            },
+                            error: function(contact, error) {
+                            // error is a Parse.Error with an error code and message.
+                            alert('Failed to create new object, with error code: ' + error.message);
+                            }
+                          });
+                        }
+                        else {
+                          alert("Must be signed in to add to cart");
+                        }
                       }
                     </script>
               </center>
@@ -1186,21 +1220,21 @@
       }
 
 var decodeStuffz = function () {
-var urlParams;
-(window.onpopstate = function () {
-  var match,
-    pl     = /\+/g,  // Regex for replacing addition symbol with a space
-    search = /([^&=]+)=?([^&]*)/g,
-    decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
-    query  = window.location.search.substring(1);
+  var urlParams;
+  (window.onpopstate = function () {
+    var match,
+      pl     = /\+/g,  // Regex for replacing addition symbol with a space
+      search = /([^&=]+)=?([^&]*)/g,
+      decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+      query  = window.location.search.substring(1);
 
-  urlParams = {};
-  while (match = search.exec(query))
-    urlParams[decode(match[1])] = decode(match[2]);
-})();
+    urlParams = {};
+    while (match = search.exec(query))
+      urlParams[decode(match[1])] = decode(match[2]);
+  })();
 
-var queryItem = urlParams["item"];
-return queryItem
+  var queryItem = urlParams["item"];
+  return queryItem
 }
   var queryItem = decodeStuffz();
      Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP1lZLiC8LBQHYyCvqwuE3e3");  
