--- a/sell.html
+++ b/sell.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <script src="header.js"></script>
+    <script src="js/header.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
 
     <title>Sell</title>
@@ -440,7 +440,7 @@
         <div class="well text-center" id="spread-heat-well">
           <h2 class="blue">spread some heat</h2>
 		      <p id="openStore">
-		        <a href='sellItem.html' class="btn btn-primary btn-lg" role="button" data-toggle="modal">sell a shoe</a>
+		        <a href='sellItem.html' class="btn btn-primary btn-lg" role="button">sell a shoe</a>
 		      </p>
           <video width="900" height="400" controls>
             <source src="files/howToSell.mp4" type="video/mp4">
