--- a/men.html
+++ b/men.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="js/instafeed.min.js"></script>
 
 
-    <title>HeatSwap</title>
+    <title>ReTwill</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
